--- a/package.json
+++ b/package.json
@@ -8,12 +8,27 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "framer-motion": "^4.1.11",
     "gray-matter": "^4.0.3",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "latest",
+    "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.49.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^11.0.0",
+    "file-loader": "^6.2.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-standard": "^22.0.0"
   }
 }
