--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-tilt": "^0.1.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "sass": "^1.49.7"
